------------------------------
       Version 7.8
------------------------------

  . make Scribble's PDF button work under unix

  . compiled/errortrace is no longer consulted by DrRacket as
    a source of zo files (before it was consulted when in debugging
    mode, but this was problematic)

------------------------------
       Version 7.7
------------------------------

  . replaced DrRacket's internal bug report mechanism with a pointer to GitHub

  . various bug fixes, minor performance improvements, and documentation improvements

------------------------------
       Version 7.6
------------------------------

  . improved the responsivness of scrolling via trackpads

  . improved dark mode on mac os and linux

------------------------------
       Version 7.5
------------------------------

  . change the bound variable jumping around to ignore arrows that
    come from `require`s.

  . recall the most recently used #lang line and use that for new tabs

  . minor bug fixes and documentation fixes

------------------------------
       Version 7.4
------------------------------

  . minor bug fixes

------------------------------
       Version 7.3
------------------------------

  . Improved DrRacket's support for the OS's
    light-on-dark color schemes

  . minor bug fixes

------------------------------
       Version 7.2
------------------------------

  . Added QuickScript to the standard install for DrRacket.
    Thanks to Laurent Orseau for his work!

  . misc minor bug fixes

------------------------------
       Version 7.1
------------------------------

  . Add backtrace to out of memory errors (when available)

  . Fix bug that prevented cmd-H (to hide a window 
    under macOS) from working

  . New users of DrRacket open files into new tabs instead of new
    frames (by default).

------------------------------
       Version 7.0
------------------------------

  . Exectuable creation under windows can embed DLLs (making the